--- a/app/templates/bop.html
+++ b/app/templates/bop.html
@@ -65,12 +65,12 @@
         {% endif %}
     {% endif %}
     
-    <!-- {% if add_button %}
+    {% if add_button %}
         <form method="POST">
             <button type="submit">Add Bop to Database</button>
         </form>
     {% else %}
         <p></p>
-    {% endif %} -->
+    {% endif %}
 </body>
 </html>
